@@ -1,19 +1,28 @@
 package se.mockachino.order;
 
 import se.mockachino.MethodCall;
+import se.mockachino.Mockachino;
 import se.mockachino.exceptions.VerificationError;
 import se.mockachino.matchers.MethodMatcher;
 import se.mockachino.util.MockachinoMethod;
+import se.mockachino.verifier.BadUsageBuilder;
+import se.mockachino.verifier.BadUsageHandler;
 import se.mockachino.verifier.MatchingHandler;
 import se.mockachino.verifier.Reporter;
 
 public class InOrderVerifyHandler extends MatchingHandler {
+    public static final BadUsageHandler BAD_USAGE_HANDLER = new BadUsageHandler(
+            new BadUsageBuilder(
+                    "Incorrect usage. You can not chain calls when verifying a deep mock. " +
+                    "You probably used verify().on(mock).method1().method2(). " +
+                    "Correct usage is verify().on(mock.method1()).method2()"));
+
 	private final Iterable<MethodCall> calls;
 	private final int min;
 	private final OrderingContext orderingContext;
 
-	public InOrderVerifyHandler(OrderingContext orderingContext, Object mock, Iterable<MethodCall> calls, int min) {
-		super("InOrderVerifyHandler", mock.toString());
+    public InOrderVerifyHandler(OrderingContext orderingContext, Object mock, Iterable<MethodCall> calls, int min) {
+		super("InOrderVerifyHandler", mock.toString(), BAD_USAGE_HANDLER);
 		this.orderingContext = orderingContext;
 		this.calls = calls;
 		this.min = min;
