@@ -4,15 +4,24 @@ import se.mockachino.CallHandler;
 import se.mockachino.MockData;
 import se.mockachino.matchers.MethodMatcher;
 import se.mockachino.util.MockachinoMethod;
+import se.mockachino.verifier.BadUsageBuilder;
+import se.mockachino.verifier.BadUsageHandler;
 import se.mockachino.verifier.MatchingHandler;
 
 public class StubHandler extends MatchingHandler {
-	private final CallHandler answer;
+    private static final BadUsageHandler BAD_USAGE_HANDLER = new BadUsageHandler(
+            new BadUsageBuilder(
+                    "Incorrect usage. You can not chain calls when stubbing a deep mock. " +
+                    "You probably used stubReturn(value).on(mock).method1().method2(). " +
+                    "Correct usage is stubReturn(value).on(mock.method1()).method2()"));
+
+
+    private final CallHandler answer;
 	private final MockData data;
 	private final StubVerifier verifier;
 
 	public StubHandler(CallHandler answer, Object mock, MockData data, StubVerifier verifier) {
-		super("StubHandler", mock.toString());
+		super("StubHandler", mock.toString(), BAD_USAGE_HANDLER);
 		this.answer = answer;
 		this.data = data;
 		this.verifier = verifier;
