@@ -2,15 +2,18 @@ package se.mockachino.verifier;
 
 import org.junit.Test;
 import se.mockachino.Mockachino;
+import se.mockachino.exceptions.UsageError;
 import se.mockachino.exceptions.VerificationError;
 
 import java.util.List;
+import java.util.StringTokenizer;
 
 import static org.junit.Assert.fail;
 import static se.mockachino.Mockachino.mock;
 import static se.mockachino.Mockachino.verifyAtLeast;
 import static se.mockachino.Mockachino.verifyNever;
 import static se.mockachino.Mockachino.verifyOnce;
+import static se.mockachino.Settings.fallback;
 
 public class VerifyHandlerTest {
 	@Test
@@ -105,4 +108,31 @@ public class VerifyHandlerTest {
 		}
 	}
 
+    @Test
+    public void testBadVerification() {
+        StringTokenizer mock = Mockachino.mock(StringTokenizer.class, fallback(Mockachino.DEEP_MOCK));
+
+        mock.nextElement();
+        mock.nextToken();
+
+        // Correct usage
+        Mockachino.verifyAtLeast(1).on(mock).nextElement();
+        Mockachino.verifyAtLeast(1).on(mock).nextToken();
+
+        try {
+            Mockachino.verifyAtLeast(1).on(mock).nextElement().equals(null);
+            fail("Should have failed");
+        } catch (UsageError e) {
+            e.printStackTrace();
+        }
+
+        try {
+            StringTokenizer verifier = Mockachino.verifyAtLeast(1).on(mock);
+            verifier.nextToken().equals(null);
+            fail("Should have failed - can't make proxy for final classes");
+        } catch (NullPointerException e) {
+            e.printStackTrace();
+        }
+
+    }
 }
