@@ -4,6 +4,8 @@ upcoming..
 - Version 0.3.1
 ----------------------
 * Changed behaviour of deep mock handler to remember arguments
+* Added detection of incorrect verification usage on the form: verify().on(mock).foo().bar(); instead of verify().on(mock.foo()).bar();
+
 
 ----------------------
 - Version 0.3.0
